# fips

./: Makefile  README.md  pyproject.toml
.github/workflows/: validate.yaml
docs/: fips.html  index.html  search.js
docs/fips/: cli.html  counties.html  states.html
fips/: __init__.py  cli.py  counties.py  states.py
tests/: tests.py
